Improve doc and code details.

--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -2,27 +2,31 @@
 
 [返回目录](./README.md)
 
-### **功能介绍**  
-配置信息的增删改查  
+### 功能介绍
 
-### **接口介绍**  
-配置管理功能有4个接口  
+配置信息的增删改查
+
+### 接口介绍
+
+配置管理功能有5个接口  
 创建配置接口  
 删除配置接口  
 修改配置接口  
+查询具体配置接口  
 查询配置列表接口  
 
 ## 创建配置接口
 
-`英文名：`
+### 英文名
 
 createConfig
 
-`解释：`
+### 解释
 
 接收前端的数据存入本地存储。
+第一个迭代暂定由前端写死 类型值 backend frontend这些,后面迭代这些数值均是由后端返回.
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -30,75 +34,95 @@ POST
 Content-Type:application/json
 ```
 
-`请求body` frontend逻辑
+### 请求body  frontend逻辑
 
 ```json
 {
-  "name": "my config 1",
+  "name": "my config frontend",
   "typ": "frontend",
   "conf": {
-    "escProxyPort": 8888
-  },
-  "remark": "备注"
-}
-```
-
-`请求body` backend逻辑
-
-```json
-{
-  "name": "my config 1",
-  "typ": "backend",
-  "conf": {
-    "serverPort": 12345
-  },
-  "remark": "备注"
-}
-```
-
-`请求body` alert逻辑
-
-```json
-{
-  "name": "my config 1",
-  "typ": "alert",
-  "conf": {
-    "alertType": "mail",
-    "alert": {
-      //TODO 后面再写
+    "frontend": {
+      "escProxyPort": 8888
     }
   },
   "remark": "备注"
 }
 ```
 
-`请求body` master逻辑
+### 请求body  backend逻辑
 
 ```json
 {
-  "name": "my config 1",
+  "name": "my config backend",
+  "typ": "backend",
+  "conf": {
+    "backend": {
+      "serverPort": 12345
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求body  alert逻辑 mail
+
+```json
+{
+  "name": "my config alert",
+  "typ": "alert",
+  "conf": {
+    "alert": {
+      "alertType": "mail",
+      "mailSender": "你的邮箱",
+      "mailUser": "你的邮箱",
+      "mailPasswd": "你的密码",
+      "mailServerHost": "smtp.163.com",
+      "mailServerPort": 25,
+      "mailSmtpSslEnable": false,
+      "mailSmtpStarttlsEnable": false
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求body  alert逻辑 weixin
+
+```json
+//TODO 后面再写
+```
+
+### 请求body  master逻辑
+
+```json
+{
+  "name": "my config master",
   "typ": "master",
   "conf": {
-    "masterReservedMemory": 1
+    "master": {
+      "masterReservedMemory": 0.5
+    }
   },
   "remark": "备注"
 }
 ```
 
-`请求body` worker逻辑
+### 请求body  worker逻辑
 
 ```json
 {
-  "name": "my config 1",
+  "name": "my config worker",
   "typ": "worker",
   "conf": {
-    "workerReservedMemory": 1
+    "worker": {
+      "workerReservedMemory": 0.5
+    }
   },
   "remark": "备注"
 }
 ```
 
-`请求body` database逻辑
+### 请求body  database逻辑
 
 ```json
 {
@@ -106,7 +130,7 @@ Content-Type:application/json
   "typ": "database",
   "conf": {
     "databaseType": "mysql",
-    "dbName": "easy",
+    "databaseName": "dolphinscheduler",
     "account": "easy",
     "password": "easy"
   },
@@ -114,23 +138,63 @@ Content-Type:application/json
 }
 ```
 
-`请求字段解释`
+### 请求body hadoop逻辑
+
+```json
+{
+  "name": "my config hadoop",
+  "typ": "database",
+  "conf": {
+    "hadoop": {
+      "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求body common逻辑
+
+```json
+{
+  "name": "my config hadoop",
+  "typ": "database",
+  "conf": {
+    "common": {
+      "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
 escProxyPort|int|true| |前端端口
 serverPort|int|true| |后端端口
+typ|string|true| |配置类型，取值范围【frontend，backend，alert，master，worker，database，hadoop，common，zookeeper】
 alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
-alert //TODO 后面在写 | | | |
+mailSender|string|true| |邮件发送人
+mailUser|string|true| |邮件帐号
+mailPasswd|string|true| |邮件密码
+mailServerHost|string|true| |邮件发送服务器
+mailServerPort|int|true| |邮件发送端口
+mailSmtpSslEnable|bool|true| |开启邮件ssl协议
+mailSmtpStarttlsEnable|bool|true| |开启邮件tls协议
 masterReservedMemory|float|true| |master内存
 workerReservedMemory|float|true| |worker内存
 databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
-dbName|string|true| |数据库名，建议使用 dolphinscheduler
+databaseName|string|true| |数据库名，建议使用 dolphinscheduler
 account|stirng|true| |数据库帐号
 password|string|true| |数据库密码
 remark|string|false| |备注
+dataStore2hdfsBasepath|string|true| |资源中心上传路径
+fsDefaultFS|string|true| |hadoop资源目录
 
-`响应body` 成功逻辑
+
+### 响应body  成功逻辑
 
 ```json
 {
@@ -140,7 +204,7 @@ remark|string|false| |备注
 }
 ```
 
-`响应body` 失败逻辑
+### 响应body  失败逻辑
 
 ```json
 {
@@ -150,23 +214,23 @@ remark|string|false| |备注
 }
 ```
 
-`响应字段解释`
+### 响应字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-无| | | | 
+无| | | |
 
 ## 删除配置接口
 
-`英文名：`
+### 英文名
 
 deleteConfig
 
-`解释：`
+### 解释
 
 删除配置
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -174,23 +238,21 @@ POST
 Content-Type:application/json
 ```
 
-`请求body`
+### 请求body
 
 ```json
 {
-  "typ": "database",
-  "id": 12123
+  "id": "942b3023"
 }
 ```
 
-`请求字段解释`
+### 请求字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
-id|int|true| |配置id
+id|string|true| |配置id
 
-`响应body` 成功逻辑
+### 响应body  成功逻辑
 
 ```json
 {
@@ -200,7 +262,7 @@ id|int|true| |配置id
 }
 ```
 
-`响应body` 失败逻辑
+### 响应body  失败逻辑
 
 ```json
 {
@@ -210,7 +272,7 @@ id|int|true| |配置id
 }
 ```
 
-`响应字段解释`
+### 响应字段解释 
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
@@ -218,15 +280,15 @@ id|int|true| |配置id
 
 ## 修改配置接口
 
-`英文名：`
+### 英文名
 
 updateConfig
 
-`解释：`
+### 解释
 
 修改配置
 
-`接口类型：`
+### 接口类型 
 
 ```
 POST
@@ -234,89 +296,109 @@ POST
 Content-Type:application/json
 ```
 
-`请求body` frontend逻辑
+### 请求body  frontend逻辑
 
 ```json
 {
-  "id": 1,
-  "name": "my config 1",
+  "id":"942b3023",
+  "name": "my config frontend",
   "typ": "frontend",
   "conf": {
-    "escProxyPort": 8888
-  },
-  "remark": "备注"
-}
-```
-
-`请求body` backend逻辑
-
-```json
-{
-  "id": 1,
-  "name": "my config 1",
-  "typ": "backend",
-  "conf": {
-    "serverPort": 12345
-  },
-  "remark": "备注"
-}
-```
-
-`请求body` alert逻辑
-
-```json
-{
-  "id": 1,
-  "name": "my config 1",
-  "typ": "alert",
-  "conf": {
-    "alertType": "mail",
-    "alert": {
-      //TODO 后面再写
+    "frontend": {
+      "escProxyPort": 8888
     }
   },
   "remark": "备注"
 }
 ```
 
-`请求body` master逻辑
+### 请求body  backend逻辑
 
 ```json
 {
-  "id": 1,
-  "name": "my config 1",
+  "id":"942b3023",
+  "name": "my config backend",
+  "typ": "backend",
+  "conf": {
+    "backend": {
+      "serverPort": 12345
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求body  alert逻辑 mail
+
+```json
+{
+  "id":"942b3023",
+  "name": "my config alert",
+  "typ": "alert",
+  "conf": {
+    "alert": {
+      "alertType": "mail",
+      "mailSender": "你的邮箱",
+      "mailUser": "你的邮箱",
+      "mailPasswd": "你的密码",
+      "mailServerHost": "smtp.163.com",
+      "mailServerPort": 25,
+      "mailSmtpSslEnable": false,
+      "mailSmtpStarttlsEnable": false
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求body  alert逻辑 weixin
+
+```json
+//TODO 后面再写
+```
+
+### 请求body  master逻辑
+
+```json
+{
+  "id":"942b3023",
+  "name": "my config master",
   "typ": "master",
   "conf": {
-    "masterReservedMemory": 1
+    "master": {
+      "masterReservedMemory": 0.5
+    }
   },
   "remark": "备注"
 }
 ```
 
-`请求body` worker逻辑
+### 请求body  worker逻辑
 
 ```json
 {
-  "id": 1,
-  "name": "my config 1",
+  "id":"942b3023",
+  "name": "my config worker",
   "typ": "worker",
   "conf": {
-    "workerReservedMemory": 1
+    "worker": {
+      "workerReservedMemory": 0.5
+    }
   },
   "remark": "备注"
 }
 ```
 
-`请求body` database逻辑
+### 请求body  database逻辑
 
 ```json
 {
-  "id": 1,
+  "id":"942b3023",
   "name": "my config 1",
   "typ": "database",
   "conf": {
     "databaseType": "mysql",
-    "dbName": "easy",
+    "databaseName": "dolphinscheduler",
     "account": "easy",
     "password": "easy"
   },
@@ -324,24 +406,65 @@ Content-Type:application/json
 }
 ```
 
-`请求字段解释`
+### 请求body hadoop逻辑
+
+```json
+{
+  "id":"942b3023",
+  "name": "my config hadoop",
+  "typ": "database",
+  "conf": {
+    "hadoop": {
+      "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求body common逻辑
+
+```json
+{
+  "id":"942b3023",
+  "name": "my config hadoop",
+  "typ": "database",
+  "conf": {
+    "common": {
+      "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+    }
+  },
+  "remark": "备注"
+}
+```
+
+### 请求字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id|int|true||配置id
+id|string|true| |配置id
 escProxyPort|int|true| |前端端口
 serverPort|int|true| |后端端口
+typ|string|true| |配置类型，取值范围【frontend，backend，alert，master，worker，database，hadoop，common，zookeeper】
 alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
-alert //TODO 后面在写 | | | |
+mailSender|string|true| |邮件发送人
+mailUser|string|true| |邮件帐号
+mailPasswd|string|true| |邮件密码
+mailServerHost|string|true| |邮件发送服务器
+mailServerPort|int|true| |邮件发送端口
+mailSmtpSslEnable|bool|true| |开启邮件ssl协议
+mailSmtpStarttlsEnable|bool|true| |开启邮件tls协议
 masterReservedMemory|float|true| |master内存
 workerReservedMemory|float|true| |worker内存
 databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
-dbName|string|true| |数据库名，建议使用 dolphinscheduler
+databaseName|string|true| |数据库名，建议使用 dolphinscheduler
 account|stirng|true| |数据库帐号
 password|string|true| |数据库密码
 remark|string|false| |备注
+dataStore2hdfsBasepath|string|true| |资源中心上传路径
+fsDefaultFS|string|true| |hadoop资源目录
 
-`响应body` 成功逻辑
+### 响应body  成功逻辑
 
 ```json
 {
@@ -351,7 +474,7 @@ remark|string|false| |备注
 }
 ```
 
-`响应body` 失败逻辑
+### 响应body  失败逻辑
 
 ```json
 {
@@ -361,22 +484,22 @@ remark|string|false| |备注
 }
 ```
 
-`响应字段解释`
+### 响应字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-无||||
+无| | | |
 
 ## 查询具体配置
 
-`英文名：`
+### 英文名
 
 selectConfig
 
-`解释：`
+### 解释
 根据配置id和类型去查询具体配置信息
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -384,100 +507,108 @@ POST
 Content-Type:application/json
 ```
 
-`请求body`
+### 请求body
 
 ```
 {
-  "typ": "frontend",
-  "id": 12123
+  "id": "218cedc0"
 }
 ```
-`请求字段解释`
+### 请求字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
-id|int|true| |配置id
+id|string|true| |配置id
 
-`响应body` 成功逻辑
+### 响应body  成功逻辑
 
 ```json
 {
   "code": 200,
   "message": "ok",
   "result": {
-    "id": 12123,
-    "name": "my config 1",
-    "typ": "frontend",
+    "id": "218cedc0",
+    "name": "worker4",
+    "typ": "worker",
     "conf": {
-      "frontendPort": 8888
-    },
-    "remark": "备注"
+      "worker": {
+        "worker.reserved.memory": 0.5
+      }
+    }
   }
 }
 ```
 
-`响应body` 失败逻辑
+### 响应body  失败逻辑
 
 ```json
 {
   "code": 500,
-  "message": "删除配置失败！{失败内容}",
+  "message": "查询配置失败！{失败内容}",
   "result": null
 }
 ```
 
-`响应字段解释`
+### 响应字段解释 
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
 id | int | | | 配置id
 name | string | | | 配置别名
-typ | string | | | 配置类型小写，取值范围【frontend，backend，alert，master，worker，database】
+typ|string|true| |配置类型，取值范围【frontend，backend，alert，master，worker，database，hadoop，common，zookeeper】
 escProxyPort|int|true| |前端端口
 serverPort|int|true| |后端端口
 alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
-alert //TODO 后面在写 | | | |
+mailSender|string|true| |邮件发送人
+mailUser|string|true| |邮件帐号
+mailPasswd|string|true| |邮件密码
+mailServerHost|string|true| |邮件发送服务器
+mailServerPort|int|true| |邮件发送端口
+mailSmtpSslEnable|bool|true| |开启邮件ssl协议
+mailSmtpStarttlsEnable|bool|true| |开启邮件tls协议
 masterReservedMemory|float|true| |master内存
 workerReservedMemory|float|true| |worker内存
 databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
-dbName|string|true| |数据库名，建议使用 dolphinscheduler
+databaseName|string|true| |数据库名，建议使用 dolphinscheduler
 account|stirng|true| |数据库帐号
 password|string|true| |数据库密码
 remark|string|false| |备注
+dataStore2hdfsBasepath|string|true| |资源中心上传路径
+fsDefaultFS|string|true| |hadoop资源目录
 
 ## 查询配置列表接口
 
-`英文名：`
+### 英文名
 
 selectConfigList
 
-`解释：`
+### 解释
 
 查询配置信息，分页返回列表信息。
+页面初始化的时候会调用各类配置的查询列表接口(列表接口会返回所有数据,前端需要将数据都缓存到 列表中,下一个版本会改成只返回id和名字)
 
-`接口类型：`
+### 接口类型 
 
 ```
 GET
 /api/v1/selectConfigList
 ```
 
-`请求body`
+### 请求body 
 
 ```
-http://0.0.0.0:15523/api/v1/selectConfigList?typ=master&page=1
+http://192.167.8.141:38888/api/v1/selectConfigList?page=1&typ=master
 ```
 
-`请求字段解释`
+### 请求字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database】
+typ|string|true| |配置类型，小写，取值范围【frontend，backend，alert，master，worker，database，hadoop，common，zookeeper】
 page|int|true| |分页
 
 
-`响应body` 成功逻辑
+### 响应body  成功逻辑
 
 ```json
 {
@@ -485,29 +616,64 @@ page|int|true| |分页
   "message": "ok",
   "result": {
     "currentPage": 1,
-    "total": 3,
+    "total": 5,
     "data": [
       {
-        "id": 123121,
-        "name": "my config 1",
-        "remark": "备注"
+        "id": "00b9be0f",
+        "name": "my config master1",
+        "typ": "master",
+        "conf": {
+          "master": {
+            "masterReservedMemory": 2
+          }
+        }
       },
       {
-        "id": 123122,
-        "name": "my config 2",
-        "remark": "备注"
+        "id": "581155ab",
+        "name": "my config master1",
+        "typ": "master",
+        "conf": {
+          "master": {
+            "masterReservedMemory": 1
+          }
+        }
       },
       {
-        "id": 123123,
-        "name": "my config 3",
-        "remark": "备注"
+        "id": "af66fd9c",
+        "name": "my config master1",
+        "typ": "master",
+        "conf": {
+          "master": {
+            "masterReservedMemory": 0.6
+          }
+        }
+      },
+      {
+        "id": "e58e270a",
+        "name": "my config master1",
+        "typ": "master",
+        "conf": {
+          "master": {
+            "masterReservedMemory": 0.3
+          }
+        }
+      },
+      {
+        "id": "f37ae637",
+        "name": "my config master1",
+        "typ": "master",
+        "conf": {
+          "master": {
+            "masterReservedMemory": 0.8
+          }
+        }
       }
     ]
   }
 }
 ```
 
-`响应body` 失败逻辑
+### 响应body  失败逻辑
 
 ```json
 {
@@ -517,13 +683,13 @@ page|int|true| |分页
 }
 ```
 
-`响应字段解释`
+### 响应字段解释 
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
 currentPage|int| | |当前页数
 total|int| | |总配置数
-data|string| | |日志内容
+data|string| | |数据内容，内容与创建的一致
 
 
 [返回目录](./README.md)
