--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -2,10 +2,18 @@
 
 [返回目录](./README.md)
 
-### **功能介绍**  
-集群信息的增删该查，以及集群的启动、停止、升级/部署。
+### 功能介绍
 
-### **接口介绍**  
+集群信息的增删该查，以及集群的启动、停止、升级/部署。  
+流程有先后顺序，用户在 创建集群 或 修改集群 时需要点击 保存集群 才能进行启动、停止、升级/部署操作。  
+页面在初始化的时候，需要先获得集群的2个状态分别为 是否成功安装 是否成功启动 显示在左侧列表  
+在没有保存集群前，相关的操作按钮要设为不可用状态。  
+同一时间只能一个集群启动，如果已经有集群启动了，再去启动新的集群此时要提示失败并告诉用户如果想启动新的集群，请先停止已经运行的集群。  
+集群的启动是异步的，启动后会马上返回成功启动，需要前端定时去调用执行结果信号接口，来判断是否 执行结束 与 执行成功或失败。　
+执行的同时后端会提供一个分页查看日志的接口，前端可以定时调用分页接口，以在页面显示字幕滚动的效果。　
+
+### 接口介绍
+
 配置管理功能有6个接口  
 创建/修改集群接口  
 删除集群接口  
@@ -14,18 +22,19 @@
 查看日志接口  
 执行结果信号接口
 
-## 创建/修改集群接口
+## 创建集群接口
 
-`英文名：`
+### 英文名
 
 createCluster
 
-`解释：`
+### 解释
 
-创建或更新集群信息，前端每次都会把集群的所有信息以一个大json传过来。
-后端将json数据进行更新插入到存储里。
+创建集群信息。  
+创建的时候用户可以选择已有的配置进行快速填写，这里只是将已经创建好的配置模板，快速添加到编写角色信息编辑中  
+前端的流程，页面初始化的时候会调用各类配置的查询列表接口(列表接口会返回所有数据,前端需要将数据都缓存到 选择配置模板 下拉列表中)，用户在编辑角色信息的时候，可以在 选择配置模板 下拉列表中，选择自己需要的配置进行快速添加
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -33,66 +42,162 @@ POST
 Content-Type:application/json
 ```
 
-`请求body`
+### 请求body
 
 ```json
 {
-  "name": "my cluster 1",
-  "status": 1,
+  "id": "04075add",
+  "name": "myTest1",
+  "workStatus": false,
+  "deployStatus": false,
   "hosts": [
-    {
-      "id": 289
-    },
-    {
-      "id": 28
-    }
+    "192.167.8.141"
   ],
   "base": {
     "version": "1.2.0",
     "deployUser": "easy",
-    "deployPath": "/home/easy"
+    "deployDir": "/home/easy/ds"
   },
   "roles": [
     {
+      "roleName": "database",
+      "roleBody": {
+        "account": "easy",
+        "databaseName": "dolphinscheduler",
+        "databaseType": "mysql",
+        "password": "easy"
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
+    },
+    {
       "roleName": "backend",
-      "dependHostId": 12,
-      "serverPort": 12345
+      "roleBody": {
+        "backend": {
+          "serverPort": 12345
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
     },
     {
       "roleName": "frontend",
-      "dependHostId": 12,
-      "escProxyPort": 8888
-    },
-    {
-      "roleName": "database",
-      "dependHostId": 12,
-      "databaseType": "mysql",
-      "dbName": "easy",
-      "account": "easy",
-      "password": "easy"
+      "roleBody": {
+        "frontend": {
+          "escProxyPort": 8888
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
     },
     {
       "roleName": "master",
-      "dependHostId": 12,
-      "masterReservedMemory": 1
+      "roleBody": {
+        "master": {
+          "masterReservedMemory": 0.5
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
     },
     {
       "roleName": "worker",
-      "dependHostId": 12,
-      "workerReservedMemory": 1
+      "roleBody": {
+        "worker": {
+          "workerReservedMemory": 0.5
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
     },
     {
-      // TODO 其他角色后面再写
+      "roleName": "alert",
+      "roleBody": {
+        "alert": {
+          "alertType": "mail",
+          "mailSender": "邮箱发送人",
+          "mailUser": "邮箱帐号",
+          "mailPasswd": "邮箱密码",
+          "mailServerHost": "smtp.163.com",
+          "mailServerPort": 25,
+          "mailSmtpSslEnable": false,
+          "mailSmtpStarttlsEnable": false
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
+    },
+    {
+      "roleName": "zookeeper",
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
+    },
+    {
+      "roleName": "hadoop",
+      "roleBody": {
+        "hadoop": {
+          "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
+    },
+    {
+      "roleName": "common",
+      "roleBody": {
+        "common": {
+          "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+        }
+      },
+      "roleDependHost": [
+        "192.167.8.141"
+      ]
     }
-  ]
+  ],
+  "remark": "ansible test 1"
 }
 ```
 
-`请求字段解释`
+### 请求字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-// TODO 字段解释太多后面再写
+roleName|string|true| |角色名字，取值范围【frontend，backend，alert，master，worker，database，hadoop，common，zookeeper】
+roleBody|object|true| |角色配置内容，对应具体配置
+roleDependHost|array|true| |角色依赖host列表
+workStatus|bool|true| |集群工作状态，是否启动
+deployStatus|bool|true| |集群部署状态，是否部署
+version|string|true| |集群版本，只能1.2.0版本以上，老版本不兼容
+deployUser|string|true|easy|部署用户，前端界面写死，第一个版本只能是叫easy
+deployDir|string|true|/home/easy/ds|部署目录，如果没有特殊要求请使用默认目录
+roles|array|true| |角色列表
+escProxyPort|int|true| |前端端口
+serverPort|int|true| |后端端口
+alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
+mailSender|string|true| |邮件发送人
+mailUser|string|true| |邮件帐号
+mailPasswd|string|true| |邮件密码
+mailServerHost|string|true| |邮件发送服务器
+mailServerPort|int|true| |邮件发送端口
+mailSmtpSslEnable|bool|true| |开启邮件ssl协议
+mailSmtpStarttlsEnable|bool|true| |开启邮件tls协议
+masterReservedMemory|float|true| |master内存
+workerReservedMemory|float|true| |worker内存
+databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
+databaseName|string|true| |数据库名，建议使用 dolphinscheduler
+account|stirng|true| |数据库帐号
+password|string|true| |数据库密码
+remark|string|false| |备注
+dataStore2hdfsBasepath|string|true| |资源中心上传路径
+fsDefaultFS|string|true| |hadoop资源目录
 
 `响应body` 成功逻辑
 
@@ -109,12 +214,12 @@ Content-Type:application/json
 ```json
 {
   "code": 500,
-  "message": "更新插入失败！｛错误信息｝",
+  "message": "插入失败！｛错误信息｝",
   "result": null
 }
 ```
 
-`响应字段解释`
+### 响应字段解释   
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
@@ -122,15 +227,15 @@ Content-Type:application/json
 
 ## 删除集群接口
 
-`英文名：`
+### 英文名
 
 deleteCluster
 
-`解释：`
+### 解释
 
 根据集群id，删除集群
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -138,19 +243,19 @@ POST
 Content-Type:application/json
 ```
 
-`请求body`
+### 请求body 
 
 ```json
 {
-  "id": 19827
+  "id": "fb03ea72"
 }
 ```
 
-`请求字段解释`
+### 请求字段解释  
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id|int|true||集群id
+id|string|true||集群id
 
 `响应body` 成功逻辑
 
@@ -172,23 +277,23 @@ id|int|true||集群id
 }
 ```
 
-`响应字段解释`
+### 响应字段解释
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-无||||
+无| | | |
 
 ## 查询具体集群
 
-`英文名：`
+### 英文名
 
 selectCluster
 
-`解释：`
+### 解释
 
 根据集群id，返回集群信息
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -196,19 +301,19 @@ POST
 Content-Type:application/json
 ```
 
-`请求body`
+### 请求body 
 
 ```json
 {
-  "id": 1
+  "id": "894064de"
 }
 ```
 
-`请求字段解释`
+### 请求字段解释  
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id | int | true | | 集群id
+id | string | true | | 集群id
 
 `响应body` 成功逻辑
 
@@ -217,52 +322,329 @@ id | int | true | | 集群id
   "code": 200,
   "message": "ok",
   "result": {
-    "id": 1,
-    "name": "my cluster 1",
-    "status": 1,
+    "id": "894064de",
+    "name": "myTest1",
+    "workStatus": false,
+    "deployStatus": false,
     "hosts": [
-      {
-        "id": 289
-      },
-      {
-        "id": 28
-      }
+      "192.167.8.141"
     ],
     "base": {
       "version": "1.2.0",
       "deployUser": "easy",
-      "deployPath": "/home/easy"
+      "deployDir": "/home/easy/ds"
     },
     "roles": [
       {
+        "roleName": "database",
+        "roleBody": {
+          "account": "easy",
+          "databaseName": "dolphinscheduler",
+          "databaseType": "mysql",
+          "password": "easy"
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
+      },
+      {
         "roleName": "backend",
-        "dependHostId": 12,
-        "serverPort": 12345
+        "roleBody": {
+          "backend": {
+            "serverPort": 12345
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
       },
       {
         "roleName": "frontend",
-        "dependHostId": 12,
-        "escProxyPort": 8888
-      },
-      {
-        "roleName": "database",
-        "dependHostId": 12,
-        "databaseType": "mysql",
-        "dbName": "easy",
-        "account": "easy",
-        "password": "easy"
+        "roleBody": {
+          "frontend": {
+            "escProxyPort": 8888
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
       },
       {
         "roleName": "master",
-        "dependHostId": 12,
-        "masterReservedMemory": 1
+        "roleBody": {
+          "master": {
+            "masterReservedMemory": 0.5
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
       },
       {
         "roleName": "worker",
-        "dependHostId": 12,
-        "workerReservedMemory": 1
+        "roleBody": {
+          "worker": {
+            "workerReservedMemory": 0.5
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
       },
-      {}
+      {
+        "roleName": "alert",
+        "roleBody": {
+          "alert": {
+            "alertType": "mail",
+            "mailPasswd": "邮箱密码",
+            "mailSender": "邮箱发送人",
+            "mailServerHost": "smtp.163.com",
+            "mailServerPort": 25,
+            "mailSmtpSslEnable": false,
+            "mailSmtpStarttlsEnable": false,
+            "mailUser": "邮箱帐号"
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
+      },
+      {
+        "roleName": "zookeeper",
+        "roleBody": null,
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
+      },
+      {
+        "roleName": "hadoop",
+        "roleBody": {
+          "hadoop": {
+            "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
+      },
+      {
+        "roleName": "common",
+        "roleBody": {
+          "common": {
+            "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+          }
+        },
+        "roleDependHost": [
+          "192.167.8.141"
+        ]
+      }
+    ],
+    "remark": "ansible test 1"
+  }
+}
+```
+
+`响应body` 失败逻辑
+
+```json
+{
+  "code": 500,
+  "message": "查询失败！｛错误内容｝",
+  "result": null
+}
+```
+
+### 响应字段解释   
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+id|string|true| |集群id
+roleName|string|true| |角色名字，取值范围【frontend，backend，alert，master，worker，database，hadoop，common，zookeeper】
+roleBody|object|true| |角色配置内容，对应具体配置
+roleDependHost|array|true| |角色依赖host列表
+workStatus|bool|true| |集群工作状态，是否启动
+deployStatus|bool|true| |集群部署状态，是否部署
+roles|array|true| |角色列表
+escProxyPort|int|true| |前端端口
+serverPort|int|true| |后端端口
+alertType|string|true| |告警类型，小写，取值范围【mail，weixin】
+mailSender|string|true| |邮件发送人
+mailUser|string|true| |邮件帐号
+mailPasswd|string|true| |邮件密码
+mailServerHost|string|true| |邮件发送服务器
+mailServerPort|int|true| |邮件发送端口
+mailSmtpSslEnable|bool|true| |开启邮件ssl协议
+mailSmtpStarttlsEnable|bool|true| |开启邮件tls协议
+masterReservedMemory|float|true| |master内存
+workerReservedMemory|float|true| |worker内存
+databaseType|string|true| |数据库类型，小写，取值范围【mysql，postgresql】
+databaseName|string|true| |数据库名，建议使用 dolphinscheduler
+account|stirng|true| |数据库帐号
+password|string|true| |数据库密码
+remark|string|false| |备注
+dataStore2hdfsBasepath|string|true| |资源中心上传路径
+fsDefaultFS|string|true| |hadoop资源目录
+
+## 查询集群列表接口
+
+### 英文名
+
+selectClusterList
+
+### 解释
+
+查询集群列表，返回集群列表信息。根据列表中的id去查询对应的集群信息。
+页面初始化的时候调用该接口，获取列表中带有默认的id，由此来显示默认集群信息。
+
+### 接口类型
+
+```
+GET
+/api/v1/selectClusterList
+```
+
+### 请求body
+
+```
+http://192.167.8.141:38888/api/v1/selectClusterList?page=1
+```
+
+### 请求字段解释  
+
+字段名|字段类型|是否必填|默认值|字段解释
+--- | --- | --- | --- | ---
+page|int|true| |分页数
+
+`响应body` 成功逻辑
+
+```json
+{
+  "code": 200,
+  "message": "ok",
+  "result": {
+    "currentPage": 1,
+    "total": 1,
+    "data": [
+      {
+        "id": "894064de",
+        "name": "myTest1",
+        "workStatus": false,
+        "deployStatus": false,
+        "hosts": [
+          "192.167.8.141"
+        ],
+        "base": {
+          "version": "1.2.0",
+          "deployUser": "easy",
+          "deployDir": "/home/easy/ds"
+        },
+        "roles": [
+          {
+            "roleName": "database",
+            "roleBody": {
+              "account": "easy",
+              "databaseName": "dolphinscheduler",
+              "databaseType": "mysql",
+              "password": "easy"
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "backend",
+            "roleBody": {
+              "backend": {
+                "serverPort": 12345
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "frontend",
+            "roleBody": {
+              "frontend": {
+                "escProxyPort": 8888
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "master",
+            "roleBody": {
+              "master": {
+                "masterReservedMemory": 0.5
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "worker",
+            "roleBody": {
+              "worker": {
+                "workerReservedMemory": 0.5
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "alert",
+            "roleBody": {
+              "alert": {
+                "alertType": "mail",
+                "mailPasswd": "邮箱密码",
+                "mailSender": "邮箱发送人",
+                "mailServerHost": "smtp.163.com",
+                "mailServerPort": 25,
+                "mailSmtpSslEnable": false,
+                "mailSmtpStarttlsEnable": false,
+                "mailUser": "邮箱帐号"
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "zookeeper",
+            "roleBody": null,
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "hadoop",
+            "roleBody": {
+              "hadoop": {
+                "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          },
+          {
+            "roleName": "common",
+            "roleBody": {
+              "common": {
+                "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
+              }
+            },
+            "roleDependHost": [
+              "192.167.8.141"
+            ]
+          }
+        ],
+        "remark": "ansible test 1"
+      }
     ]
   }
 }
@@ -278,93 +660,28 @@ id | int | true | | 集群id
 }
 ```
 
-`响应字段解释`
+### 响应字段解释   
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-// TODO 后面再写
-
-## 查询集群列表接口
-
-`英文名：`
-
-selectClusterList
-
-`解释：`
-
-查询集群列表，返回集群列表信息。根据列表中的id去查询对应的集群信息。
-页面初始化的时候调用该接口，获取列表中带有默认的id，由此来显示默认集群信息。
-
-`接口类型：`
-
-```
-GET
-/api/v1/selectClusterList
-```
-
-`请求body`
-
-```
-http://0.0.0.0:15523/api/v1/selectClusterList
-```
-
-`请求字段解释`
-
-字段名|字段类型|是否必填|默认值|字段解释
---- | --- | --- | --- | ---
-无||||
-
-`响应body` 成功逻辑
-
-```json
-{
-  "code": 200,
-  "message": "ok",
-  "result": [
-    {
-      "id": 1,
-      "name": "my cluster 1",
-      "status": 1
-    },
-    {
-      "id": 2,
-      "name": "my cluster 2",
-      "status": 0,
-    }
-  ]
-}
-```
-
-`响应body` 失败逻辑
-
-```json
-{
-  "code": 500,
-  "message": "查询失败！｛错误内容｝",
-  "result": null
-}
-```
-
-`响应字段解释`
-
-字段名|字段类型|是否必填|默认值|字段解释
---- | --- | --- | --- | ---
-// TODO 后面再写
+currentPage|int| | |当前页
+total|int| | |集群总数
+data|object| | |集群内容
 
 ## 执行集群接口
 
-`英文名：`
+### 英文名
 
 executeCluster
 
-`解释：`
+### 解释
 
 执行集群相关操作，启动集群，停止集群，部署/升级集群。
 执行后是马上返回【成功开始执行】的响应，判断是否【执行成功】请调用【执行结果信号接口】接口获得结果信号。
 设计是成功开始执行后，前端准备个定时器每隔5秒调用【执行结果信号接口】来获得执行结果，此时其他操作均不能操作。
 同一时间只能进行一个动作。
 
-`接口类型：`
+### 接口类型
 
 ```
 POST
@@ -372,21 +689,21 @@ POST
 Content-Type:application/json
 ```
 
-`请求body`
+### 请求body 
 
 ```json
 {
   "executeType": 0,
-  "clusterId": 127
+  "clusterId": "894064de"
 }
 ```
 
-`请求字段解释`
+### 请求字段解释  
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-executeType|string|true||执行类型【0：启动集群】【1：停止集群】【2：部署集群】【3：升级集群】
-clusterId|int|true||集群id
+executeType|string|true| |执行类型【0：启动集群】【1：停止集群】【2：部署/升级集群】
+clusterId|string|true| |集群id
 
 `响应body` 成功逻辑
 
@@ -404,7 +721,7 @@ clusterId|int|true||集群id
 无
 ```
 
-`响应字段解释`
+### 响应字段解释   
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
@@ -412,29 +729,29 @@ clusterId|int|true||集群id
 
 ## 查看日志接口
 
-`英文名：`
+### 英文名
 
 readLog
 
-`解释：`
+### 解释
 
-分页查看【上一次】执行的日志，上一次的执行有多种类型，有可能是启动集群、停止集群、安装升级集群等。
+分页查看【上一次】执行的日志，每页默认是10条，上一次的执行有多种类型，有可能是启动集群、停止集群、安装升级集群等。
 这里的设计是只能查看上一次的操作日志，如果想以资源目录的形式查看，请到服务器中用命令行查看。或者下个迭代再考虑。
 
-`接口类型：`
+### 接口类型
 
 ```
 GET
 /api/v1/readLog
 ```
 
-`请求body`
+### 请求body 
 
 ```
 http://0.0.0.0:15523/api/v1/readLog?page=1
 ```
 
-`请求字段解释`
+### 请求字段解释  
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
@@ -475,7 +792,7 @@ page|int|true||分页数
 }
 ```
 
-`响应字段解释`
+### 响应字段解释   
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
@@ -485,59 +802,83 @@ data|string| | |日志内容
 
 ## 执行结果信号接口
 
-`英文名：`
+### 英文名
 
 executeResultSignal
 
-`解释：`
+### 解释
 
-获得执行结果信号，接口只返回【成功】或【失败】，具体原因请查看日志。
+获得 上一次 执行结果信号  
+接口会返回 上一次的执行类型,是否执行结束,是否执行成功
 
-`接口类型：`
+### 接口类型
 
 ```
 GET
 /api/v1/executeResultSignal
 ```
 
-`请求body`
+### 请求body 
 
 ```
-http://0.0.0.0:15523/api/v1/executeResultSignal?id=118
+http://192.167.8.141:38888/api/v1/executeResultSignal
 ```
 
-`请求字段解释`
+### 请求字段解释  
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-id|int|true||执行id
+无| | | |
 
-`响应body` 成功逻辑 表示程序执行 结束
+`响应body` 成功逻辑 表示程序执行 结束 且执行成功
 
 ```json
 {
   "code": 200,
   "message": "ok",
-  "result": true
+  "result": {
+    "singnalType": "deployupdate",
+    "success": true,
+    "over": true
+  }
 }
 ```
 
-`响应body` 失败逻辑 表示程序执行 未结束
+`响应body` 成功逻辑 表示程序执行 未结束
 
 ```json
 {
   "code": 200,
   "message": "ok",
-  "result": false
+  "result": {
+    "singnalType": "deployupdate",
+    "success": false,
+    "over": false
+  }
 }
 ```
 
+`响应body` 失败逻辑 表示程序执行 结束 且执行未成功
 
-`响应字段解释`
+```json
+{
+  "code": 200,
+  "message": "ok",
+  "result": {
+    "singnalType": "deployupdate",
+    "success": false,
+    "over": true
+  }
+}
+```
+
+### 响应字段解释   
 
 字段名|字段类型|是否必填|默认值|字段解释
 --- | --- | --- | --- | ---
-无||||
+singnalType|string| | |执行类型,取值范围[start,stop,delopyupdate]
+success|bool| | |执行是否成功
+over|bool| | |执行是否结束
 
 
 [返回目录](./README.md)
