fix little bug.

--- a/doc/backend/登陆.md
+++ b/doc/backend/登陆.md
@@ -1,3 +1,37 @@
 ## 登陆
 
 [返回目录](./README.md)
+
+### 功能介绍
+
+用户登陆系统,如果30分钟无操作的话,任意操作会触发自动退出,或者直接页面刷新退出;(这块节省时间暂时由前端来做了)
+用户成功登陆系统之后,会处于首页界面.此时前端来调用 获取当前状态接口,来获取当前是否有启动的集群,如果有则把集群信息以卡片形式显示;
+
+### 接口介绍
+
+## 获取当前系统状态接口
+
+### 英文名
+
+currentState
+
+### 解释
+
+获取当前状态,将结果以卡片形式显示
+
+### 接口类型
+
+```
+GET
+/api/v1/currentState
+```
+
+### 请求body 
+
+```
+http://192.167.8.141:38888/api/v1/currentState
+```
+
+### 响应body  成功逻辑
+
+与查询集群结果响应一致,只是将需要的内容截取显示到主页上
