--- a/doc/backend/集群管理.md
+++ b/doc/backend/集群管理.md
@@ -12,6 +12,22 @@
 集群的启动是异步的，启动后会马上返回成功启动，需要前端定时去调用执行结果信号接口，来判断是否 执行结束 与 执行成功或失败。　
 执行的同时后端会提供一个分页查看日志的接口，前端可以定时调用分页接口，以在页面显示字幕滚动的效果。　
 
+页面布局:  
+页面分为两部分,左侧为列表部分,右侧为编辑部分
+
+流程简述:   
+- 初始化流程  
+  如果已经有集群在启动,左侧列表会为已经启动的集群标上一个绿灯标志,右侧编辑部分则直接显示该集群的内容;  
+  如果没有,左侧不显示绿灯,右侧显示空白;  
+- 操作流程  
+  用户在点击创建集群后,在弹窗里输入集群名字和备注,点击确定;  
+  此时右侧的编辑部分则为刚才创建的集群的编辑部分,用户可以继续后面的编辑,只有当最后用户点击保存集群时,左侧列表才追加一条刚才添加的集群;  
+  有3个注意事项  
+  1 如果用户在编辑其他集群,此时再点创建集群要提醒用户是否保存还是放弃;  
+  2 用户在没有保存集群之前,启动/停止/部署按钮均不可操作,只有在保存了才可以操作;  
+  3 删除集群需要给用户二段确认,防止误删.并且已经在启动的集群不允许删除,这块逻辑后端有写,直接调用会返回错误;  
+
+
 ### 接口介绍
 
 配置管理功能有6个接口  
