--- a/doc/backend/配置管理.md
+++ b/doc/backend/配置管理.md
@@ -143,7 +143,7 @@ Content-Type:application/json
 ```json
 {
   "name": "my config hadoop",
-  "typ": "database",
+  "typ": "hadoop",
   "conf": {
     "hadoop": {
       "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
@@ -157,8 +157,8 @@ Content-Type:application/json
 
 ```json
 {
-  "name": "my config hadoop",
-  "typ": "database",
+  "name": "my config common",
+  "typ": "common",
   "conf": {
     "common": {
       "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
@@ -412,7 +412,7 @@ Content-Type:application/json
 {
   "id":"942b3023",
   "name": "my config hadoop",
-  "typ": "database",
+  "typ": "hadoop",
   "conf": {
     "hadoop": {
       "fsDefaultFS": "file:///home/easy/ds/backend/dolphinscheduler_resource"
@@ -427,8 +427,8 @@ Content-Type:application/json
 ```json
 {
   "id":"942b3023",
-  "name": "my config hadoop",
-  "typ": "database",
+  "name": "my config common",
+  "typ": "common",
   "conf": {
     "common": {
       "dataStore2hdfsBasepath": "file:///home/easy/ds/backend/dolphinscheduler_resource"
